# wms-du

./: .coverage  .editorconfig  .env.development  .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  .ruff.toml  .ruleset_warmup  .secrets.baseline  CONVENTIONS.md  Dockerfile  Makefile  README.md  alembic.ini  bootstrap.sh  cfb24bbca2a0_create_order_items.py  coverage.xml  create_tables.py  db.sqlite  dev.db  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  pytest.inn  requirements-dev.txt  requirements.txt  run.sh  scratch.py  scratch_probe.py  sitecustomize.py  test.db  test_db.py  test_scan_gateway.py  test_unit.db  (+3 more)
.alembic_quarantine/: 20251026_add_store_entities.py
.github/ci/: alerting_rules.yml  phase_2_｜snapshot_outbound_真接口对接_全链路落地纪要（_2025_10_16_）.md  prometheus.yml  requirements-ci.txt  run.sh  wms_du｜前端三阶段路线图（snapshot→tasks→ops）.md  wms_du｜双线推进路线图（后台稳主链_前端mvp）.md  wms_fe_续聊纪要（自上次_canvas_之后）_phase_1_→_2_前端落地_msw_驱动_git_pr_合并.md  wmsdu_fe_mvp_联调图谱 (1).md  wmsdu_fe_mvp_联调图谱.md
.github/workflows/: backend-ci.yml  ci.yml  l2-reconcile.yml  pdd-multi-store.yml  pre_pilot.yml  register-all-checks.yml  smoke-metrics.yml  test.yml
.schema_snapshot_tmp/: a_tmp.db
_alembic_bak/versions_bak/: 08ca516bcc55_init_items_orders_order_items_v6.py  1998520bf4ca_init_items_orders_order_items.py  1a189010e7b4_fix_item_qty_available.py  1f2c758faee3_add_stock_location_link.py  20251006_stocks_constraints.py  495074aac8bf_initial_migration.py  832986a6185f_add_uq_on_orders_platform_platform_.py  8e9b33b546b1_init_items_orders_order_items_v4.py  be72591863f4_init_items_orders_order_items_v8.py  bff1b7c009fd_add_uq_on_orders_platform_platform_.py  d87c00dfc14c_init_items_orders_order_items_v7.py  dad463872aef_merge_heads.py  eacea015793d_init_items_orders_order_items_v6.py  xxxx_add_constraints_to_stocks.py
_archive__bak_disabled/: 084ef2e5298a_tighten_stocks_constraints.py  084ef2e5298a_tighten_stocks_constraints.py.bak  1088800f816e_sqlite_inline_integer_primary_key_for_.py  1223487447f9_inbound_core_models_constraints.py  1223487447f9_inbound_core_models_constraints.py.bak  20251014_ensure_stock_ledger_shape_on_pg.py  2a01baddb001_add_batches.py  2a01baddb001_add_batches.py.bak  2a01baddb002_add_stock_ledger.py  3b_add_warehouses_and_locations.py  bdc33e80391a_add_warehouses_and_locations.py  xxxx_add_stock_snapshots.py  xxxx_add_stock_snapshots.py.bak
_archive__bak_merged/: 0befa700cb0e_merge_31fc_and_3b_into_single_head.py  31fc28eac057_merge_heads_after_baseline.py  7g_merge_31fc28eac057_and_3b.py
_attic/20251105-legacy-gateways/: scan_count.py  scan_pick.py  scan_putaway.py  scan_receive.py
_migrations_disabled/: 2_7_0001_create_event_error_log.py  2_7_0001_sqlite_event_error_log.py
alembic/: env.py  env.py.bak.1759669690  env.py.bak.1759670070  env.py.bak.1759670464  script.py.mako
alembic/versions/: 02a284d9351c_tms_pricing_templates_init.py  (+715 more)
app/: authz.py  config.py  db.py  dev_metrics.py  export_openapi.py  http_problem_handlers.py  limits.py  main.py  metrics.py  models.py  ports.py  router_mount.py  schemas.py  seed.py  tasks.py  tasks.py.bak  worker.py
artifacts/: phase2.9-test-report.md
contracts/: 170_pdd_ship_notify.openapi.yaml
db/: schema.sql
docs/: README.md  ci-branch-protection.md  git_workflow_stable_v_1.md  testing-guidelines-phase2.1.md
openapi/: _current.json  v1.json
ops/: cleanup_pricing_schemes.sql  deploy_staging.sh  env.example  healthcheck.sh  register_systemd_user.sh  rollback.sh  smoke_once.sh
scripts/: alembic_cycle_fix_auto.py  assert_delta_within.py  audit_pricing_brackets.py  audit_schema_dump.py  audit_shipping_providers_bundle.sh  audit_three_books.py  audit_three_books_test.py  backfill_inbound_receipts.py  backfill_opening_ledger_from_stocks.py  backfill_opening_ledger_from_stocks_lot.py  backup_pilot_db.sh  bootstrap_domain_min.py  bootstrap_single_store.py  check_tms_runtime_semantics.sh  datafix_dest_adjustments_codes.py  db_spec.json  ddl_audit_phase_m4.py  demo_fullflow.sh  demo_fullflow_multi_order_lines.sh  demo_reserve.py  dev-pg.sh  dev-sqlite.sh  dev_server.sh  ensure_admin.py  export_openapi.py  fix_alembic_cycle.py  fix_cycle_linear.sh  golden_flow_phase4.sh  kill_uvicorn.sh  linearize_alembic.py  linearize_alembic_hard.py  list_routes.py  make_phase36_bundle.sh  mark_legacy_api_misc_tests.sh  mark_legacy_api_outbound_tests.sh  mark_legacy_outbound_tests.sh  mark_legacy_stock_tests.sh  patch_lot_id_key.py  pdd_push_inventory.py  pg_healthcheck.py  (+17 more)
src/: App.tsx  main.tsx  main.tsx.bak  router.tsx
tests/: .coverage  _problem.py  conftest.py  conftest.py.bak  factories.py  test_db_connection.py  test_db_core.py  test_main_smoke.py  test_migrations_guard.py  test_openapi_export.py  test_openapi_export_smoke.py  test_openapi_snapshot.py  test_phase3_three_books_count_contract.py  test_phase3_three_books_outbound_commit.py  test_phase3_three_books_receive_commit.py  test_phase3_three_books_return_commit.py  test_scan_gateway.py  test_schemas_import_smoke.py  test_stock_api.py  test_stock_service.py  test_users.py  test_users_extra.py
tools/: add_pre_pilot_marker.py  audit_migrations.sh  audit_model_db_diff.py  audit_shipping_pricing.sh  audit_shipping_pricing_schema.sh  audit_shipping_providers.sh  bundle_phase38_tests.sh  consistency_check.py  db_invariants.py  demo_scan_putaway.py  dump_db_schema_structured.sh  ensure_pg_ledger_shape.py  fix_legacy_marks.py  fix_locations_inserts.sh  fix_tests_items_locations.py  gen_arch_graph.py  model_db_check_after_models.txt  model_db_check_event_log.txt  model_db_check_full.txt  model_db_check_phase2_scoped.txt  model_db_check_phase3_after_fkdeps.txt  model_db_check_phase3_clean.txt  model_db_check_phase3_clean_v2.txt  model_db_diff_after_cleanup.txt  patch_phase1_to_2.sh  patch_phase2_shells.sh  phase3_location_cleanup.sh  replay_events.py  run.sh  selfcheck_phase1_to_2.sh  selfcheck_phase2_shells.sh
wms_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2963 files in other folders)
