[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_local_folder = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = [
    "E501",
    "FBT001",
    "TD",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*", "asyncpg", "asyncpg.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.coverage.run]
source = ["app"]
branch = true

# 覆盖率报告（只保留这一处；阈值临时放宽为 45）
[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --maxfail=1 -v"
filterwarnings = [
    "ignore:PydanticDeprecatedSince20:DeprecationWarning",
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
]
env = [
    "DATABASE_URL=postgresql+asyncpg://wms:wms@127.0.0.1:5432/wms",
    "DATABASE_URL_TEST=postgresql+asyncpg://wms:wms@127.0.0.1:5432/wms_test",
    "ENABLE_DIAG=1",
    "JWT_SECRET=dev-temp-secret",
]

# ==========================================================
# 新增此部分，以显式地告诉 setuptools 你的包在哪里
# ==========================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wms-project"
version = "0.1.0"
description = "A simple WMS project"

# ✅ 运行期依赖（正式收口到这里，CI 不再临时 pip 安装）
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic-settings>=2.2",
    "APScheduler>=3.10",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
pg = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "alembic",
    "httpx",
    "ruff",
    "black",
    "isort",
    "mypy",
]
