[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_local_folder = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "_attic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["E501","FBT001","TD","B008","RUF001","RUF002","RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004"]
# 迁移脚本允许 E402（迁移里经常需要运行期 import / 条件 import；强行上移可能改变执行语义）
"alembic/versions/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic", "alembic.*", "asyncpg", "asyncpg.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.coverage.run]
source = ["app"]
branch = true

# 说明：fail_under=45 仅用于 coverage 命令行；pytest-cov 的门槛由 run.sh 的 --cov-fail-under 接管。
[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-ra -q --maxfail=1"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:PydanticDeprecatedSince20:DeprecationWarning",
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
]
markers = [
    "smoke: ultra-fast path tests (inbound core, barcode 400, expiry 422, negative stock, idempotency)",
    "pg: tests requiring PostgreSQL-specific behavior",
    "sqlite: tests requiring SQLite behavior",
]
env = [
    "DATABASE_URL=postgresql+asyncpg://wms:wms@127.0.0.1:5432/wms",
    "DATABASE_URL_TEST=postgresql+asyncpg://wms:wms@127.0.0.1:5432/wms_test",
    "ENABLE_DIAG=1",
    "JWT_SECRET=dev-temp-secret",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wms-project"
version = "0.1.0"
description = "A simple WMS project"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic-settings>=2.2",
    "APScheduler>=3.10",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
pg = ["asyncpg>=0.29", "psycopg[binary]>=3.2"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "alembic",
    "httpx",
    "ruff",
    "black",
    "isort",
    "mypy",
]
